--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/themoviedb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+#ddl auto create, create-drop, validate, update
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.main.allow-bean-definition-overriding=true
+
+#app properties
+jwtSecret = theMovieDBSecret
+jwtExpirationMS = 86400000
 
