--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
