--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.6.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
