--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.1",
